syntax = "proto3";

package auth;

option go_package = "github.com/go_practice/sandbox/auth_service/gen/go/auth/v1;auth";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}

  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Logout(LogoutRequest) returns (LogoutResponse) {}

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
}

message RegisterRequest {
    string          username = 1;
    optional string email    = 2;
    string          password = 3;
}

message RegisterResponse {
  string access_token  = 1;
  string refresh_token = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token  = 1;
  string refresh_token = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool   valid = 1;
  string error = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token  = 1;
  string refresh_token = 2;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  bool   success = 1;
  string message = 2;
}
